# PointerSolver

./: .gitignore  PointerSolver.cabal  README.md  dump.json  dump2.json  dump2_raw.txt  dump3.json  main-1.json  main.json
app/: Main.hs
ghidra_script/: GhidraMetaDump.java  GhidraMetaDumpHeadless.java
ghidra_script/entity/: BasicBlock.java  ControlFlowGraph.java  Function.java  Metadata.java  PCode.java  Symbol.java
ghidra_script/utils/: PCodeOpNameCvt.java  Utils.java
ghidra_script/v1/entity/: BasicBlock.java  ControlFlowGraph.java  Function.java  Metadata.java  PCode.java  Symbol.java
ghidra_script_v/entity/: BasicBlock.java  Function.java  Metadata.java  Pcode.java  Varnode.java
lib/PointerSolver/: ControlflowGraph.hs
lib/PointerSolver/Parser/: BasicBlock.hs  BasicBlockId.hs  Metadata.hs  Pcode.hs  PcodeId.hs  PcodeOp.hs  Symbol.hs  SymbolId.hs
lib/PointerSolver/Solver/: BasicBlockSolver.hs  Context.hs  Solver.hs
lib/PointerSolver/Solver/FSM/: States.hs
lib/PointerSolver/Solver/PcodeDeducer/: BoolBinOp.hs  BoolUnaryOp.hs  CBranch.hs  Cast.hs  Copy.hs  Float2Float.hs  FloatBinOp.hs  FloatLogicOp.hs  FloatUnaryOp.hs  Helper.hs  Indirect.hs  Int2Float.hs  IntBinaryOp.hs  IntLogicOp.hs  IntUnaryOp.hs  Jump.hs  Load.hs  MapPcodeOpToDeducer.hs  MultiEqual.hs  PcodeDeducer.hs  Piece.hs  PopCount.hs  PtrAdd.hs  PtrSub.hs  Store.hs  SubPiece.hs  Trunc.hs  UnknownOp.hs
lib/PointerSolver/Solver/UDChain/: Context.hs  UDChain.hs
lib/PointerSolver/Type/: Function.hs  Metadata.hs
lib/PointerSolver/Type/BasicBlock/: BasicBlock.hs  Id.hs
lib/PointerSolver/Type/ControlFlowGraph/: BasicBlock.hs  ControlFlowGraph.hs  Pcode.hs
lib/PointerSolver/Type/Pcode/: Id.hs  Pcode.hs
lib/PointerSolver/Type/PcodeOp/: PcodeOp.hs
lib/PointerSolver/Type/Symbol/: Id.hs  Symbol.hs
lib/PointerSolver/Type/Varnode/: Varnode.hs
test/: case1.c  case1.json  case2.c  case2.json  test.sh
theory/: Playground.thy  Solver.thy  SolverTypes.thy  StringLinorder.thy  UDChain.thy  deducer.thy  helper.thy
theory/lib/PointerSolver/Solver/FSM/: States.thy
