cabal-version:      2.4
name:               PointerSolver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
-- The license under which the package is released.
-- license:
author:             Yue Yu
maintainer:         yue.yu@superfish.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable pointer-solver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , aeson               ^>=2.1.2.1
        , base                ^>=4.17.2.0
        , bytestring
        , containers
        , json                ^>=0.11
        , pointer-solver-lib
        , pretty-show

    ghc-options:
        -Wunused-imports -Werror -Wunused-matches -Wunused-local-binds

    hs-source-dirs:   app
    default-language: Haskell2010

library pointer-solver-lib
    exposed-modules:
        PointerSolver.ControlflowGraph
        PointerSolver.Parser.BasicBlock
        PointerSolver.Parser.BasicBlockId
        PointerSolver.Parser.Metadata
        PointerSolver.Parser.Pcode
        PointerSolver.Parser.PcodeId
        PointerSolver.Parser.PcodeOp
        PointerSolver.Parser.Symbol
        PointerSolver.Parser.SymbolId
        PointerSolver.Solver.BasicBlockSolver
        PointerSolver.Solver.Context
        PointerSolver.Solver.FSM.States
        PointerSolver.Solver.PcodeDeducer.BoolBinOp
        PointerSolver.Solver.PcodeDeducer.BoolUnaryOp
        PointerSolver.Solver.PcodeDeducer.Cast
        PointerSolver.Solver.PcodeDeducer.CBranch
        PointerSolver.Solver.PcodeDeducer.Copy
        PointerSolver.Solver.PcodeDeducer.Float2Float
        PointerSolver.Solver.PcodeDeducer.FloatBinOp
        PointerSolver.Solver.PcodeDeducer.FloatLogicOp
        PointerSolver.Solver.PcodeDeducer.FloatUnaryOp
        PointerSolver.Solver.PcodeDeducer.Helper
        PointerSolver.Solver.PcodeDeducer.Indirect
        PointerSolver.Solver.PcodeDeducer.Int2Float
        PointerSolver.Solver.PcodeDeducer.IntBinaryOp
        PointerSolver.Solver.PcodeDeducer.IntLogicOp
        PointerSolver.Solver.PcodeDeducer.IntUnaryOp
        PointerSolver.Solver.PcodeDeducer.Jump
        PointerSolver.Solver.PcodeDeducer.Load
        PointerSolver.Solver.PcodeDeducer.MapPcodeOpToDeducer
        PointerSolver.Solver.PcodeDeducer.MultiEqual
        PointerSolver.Solver.PcodeDeducer.PcodeDeducer
        PointerSolver.Solver.PcodeDeducer.Piece
        PointerSolver.Solver.PcodeDeducer.PopCount
        PointerSolver.Solver.PcodeDeducer.PtrAdd
        PointerSolver.Solver.PcodeDeducer.PtrSub
        PointerSolver.Solver.PcodeDeducer.Store
        PointerSolver.Solver.PcodeDeducer.SubPiece
        PointerSolver.Solver.PcodeDeducer.Trunc
        PointerSolver.Solver.PcodeDeducer.UnknownOp
        PointerSolver.Solver.Solver
        PointerSolver.Solver.UDChain.Context
        PointerSolver.Solver.UDChain.UDChain
        PointerSolver.Type.BasicBlock.BasicBlock
        PointerSolver.Type.BasicBlock.Id
        PointerSolver.Type.ControlFlowGraph.BasicBlock
        PointerSolver.Type.ControlFlowGraph.ControlFlowGraph
        PointerSolver.Type.ControlFlowGraph.Pcode
        PointerSolver.Type.Function
        PointerSolver.Type.Metadata
        PointerSolver.Type.Pcode.Id
        PointerSolver.Type.Pcode.Pcode
        PointerSolver.Type.PcodeOp.PcodeOp
        PointerSolver.Type.Symbol.Id
        PointerSolver.Type.Symbol.Symbol
        PointerSolver.Type.Varnode.Varnode

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , aeson       ^>=2.1.2.1
        , base        ^>=4.17.2.0
        , containers
        , json        ^>=0.11
        , mtl
        , split
        , text
        , vector

    ghc-options:

    -- -Wunused-imports -Werror -Wunused-matches -Wunused-local-binds

    hs-source-dirs:   lib
    default-language: Haskell2010
